<resources>
    <string name="app_name">PatientInfo</string>
    <string name="txt_patient_insert">اضافه کردن بیمار</string>
    <string name="txt_patient_search">جستجوی بیمار</string>
    <string name="txt_ill_search">جستجوی بیماری</string>
    <string name="txt_ill_add">اضافه کردن بیماری</string>
    <string name="txt_name">نام</string>
    <string name="txt_family">نام خانوادگی</string>
    <string name="txt_birthday">تاریخ تولد</string>
    <string name="txt_phone">شماره تلفن</string>
    <string name="txt_mobile">شماره موبایل</string>
    <string name="txt_idNumber">شماره ملی</string>
    <string name="txt_city">شهر</string>
    <string name="txt_address">آدرس</string>
    <string name="btn_register">ثبت بیمار</string>
    <string name="txt_disease">بیماری</string>
    <string name="txt_row_patientName">نام:</string>
    <string name="txt_row_patientFamily">نام خانوادگی:</string>
    <string name="txt_row_patientIdNumber">کد ملی:</string>
    <string name="btn_row_patientDelete">حذف بیمار</string>
    <string name="txt_row_patientDisease">نوع بیماری:</string>
    <string name="btn_row_patientEdit">ویرایش اطلاعات</string>
    <string name="edt_fragmentPatientSearch_patientName">نام بیمار را وارد کنید</string>
    <string name="edt_fragmentPatientSearch_disease">نوع بیماری را وارد کنید</string>
    <string name="edt_fragmentIdNumberSearch_idNumber">لطفا کد ملی را وارد کنید</string>
    <string name="edt_fragmentCitySearch_city">لطفا شهر را وارد کنید</string>
    <string name="txt_fragmentSearchMain_title">لطفا نوع جستجوی خودرا انتخاب کنید</string>
    <string name="rb_fragmentSearchMain_patientName">نام بیمار</string>
    <string name="rb_fragmentMainSearch_disease">بیماری</string>
    <string name="rb_fragmentMainSearch_idNumber">کد ملی</string>
    <string name="rb_fragmentMainSearch_city">شهر</string>
    <string name="btn_fragmentMainSearch_ok">تایید</string>
    <string name="btn_fragmentMainSearch_cancel">انصراف</string>
    <string name="btn_patientInfo_summary">سوابق بیمار</string>
    <string name="btn_patientInfo_edit">ویرایش</string>
    <string name="txt_drug_insert">اضافه کردن دارو</string>
    <string name="txt_addDrugFragment_title">نام دارو را وارد کنید</string>
    <string name="btn_addDrugFragment_save">ثبت</string>
    <string name="btn_medicalRecordFragment_add">اضافه کردن سابقه بیمار</string>
    <string name="txt_row_addDrug_dateTitle">تاریخ:</string>
    <string name="txt_row_addDrug_soledDrugTitle">داروهای تجویز شده:</string>
    <string name="btn_addMedicalRecordFragment_add">اضافه کردن دارو</string>
    <string name="btn_row_addDrug_addDrug">اضافه کردن دارو</string>
    <string name="txt_sms_send">ارسال پیامک</string>
    <string name="rb_smsFragment_city">شهر</string>
    <string name="rb_smsFragment_disease">بیماری</string>
    <string name="btn_smsFragment_send">ارسال پیام</string>
    <string name="txt_send_sms_hint">محل یادداشت متن پیامک</string>
</resources>
