<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bn_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>
    <com.ss.bottomnavigation.BottomNavigation
        android:id="@+id/bn_main"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:mode="phone">

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_ill_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/add_ill"
            app:tab_text="@string/txt_ill_add"
            app:unselected_tab_icon="@drawable/add_ill_unselect">
        </com.ss.bottomnavigation.TabItem>

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_patient_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/search_patient"
            app:tab_text="@string/txt_patient_search"
            app:unselected_tab_icon="@drawable/search_patient_unselected">
        </com.ss.bottomnavigation.TabItem>

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_patient_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:tab_icon="@drawable/insert_patient"
            app:tab_text="@string/txt_patient_insert"
            app:unselected_tab_icon="@drawable/insert_patient_unselect">
        </com.ss.bottomnavigation.TabItem>
    </com.ss.bottomnavigation.BottomNavigation>
</android.support.constraint.ConstraintLayout>